2009-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ColorMatrixImage): Add opaque opacity channel if
	image currently lacks an opacity channel but the matrix updates
	the opacity channel.  Requested by Kerry Panchoo.

2009-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (GetIPTCStream): Updates from John.Sergeant to fix
	issues with IPTC record 2 blocks and to deal better with IPTC
	embedded in an 8BIM profile.

	* PerlMagick/t/read.t: Added tests for Topol format.

2009-09-12 Fojtik Jaroslav  <JaFojtik@seznam.cz>
	* coders/topol.c: Pallette overflow fixed for subtype 3.

2009-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/msl_composite.sh: Use a draw command file for
	this test script too.

	* utilities/tests/{black-threshold.sh,draw.sh,recolor.sh,
	white-threshold.sh}: MSYS is sometimes wreaking havoc on arguments
	with spaces in them so use work-arounds.

2009-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTGhostscriptFind): Improve logging messages
	when searching for Ghostscript.

2009-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (CacheInfo): Add read_only member to
	indicate if cache is allowed to be modified.
	(ModifyCache): Clone cache if origin cache is read only.
	(PersistCache): Persistent caches which are attached are treated
	as read-only.  This avoids crash with MPC images which are read
	and subsequently modified.
	Reverted pixel cache locking changes which were made yesterday
	since I decided that they were too risky until file handle
	management is addressed.

2009-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Increase
	operating system file handle limits if necessary.

	* magick/pixel_cache.c: Pixel cache file locking is now done at
	point of access.

	* magick/nt_base.c (NTGhostscriptFind): New function to find